--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "todo",
   "version": "0.1.0",
   "private": true,
+  "homepage" : "/todo",
   "dependencies": {
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
