--- a/package.json
+++ b/package.json
@@ -2,19 +2,17 @@
   "name": "todo",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "/todo",
+  "homepage": "/todo",
   "dependencies": {
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "antd": "^3.8.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "devDependencies": {
-    "antd": "^3.8.2"
   }
 }
