--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "homepage": "/todo",
   "dependencies": {
+    "antd": "^3.8.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.5",
-    "antd": "^3.8.2"
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
